# ROSBag-to-CSV

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: rosbag_to_csv.launch
scripts/: pyqt_gui.py  rosbag_to_csv.py
